Name:                     katana
Version:                  0.1
Synopsis:                 Katana
Description:              Katana
License:                  BSD3
License-File:             LICENSE
Author:                   Chris Mahon
Maintainer:               cnmahon@gmail.com
Copyright:                Chris Mahon 2014
Category:                 Control,Data
Build-Type:               Simple
Stability:                Experimental
Cabal-Version:            >= 1.10

Source-Repository         head
  type:                   git
  location:               git://github.com/cmahon/katana.git

Library
  hs-source-dirs:         library
  ghc-options:            -Wall -O2
  default-language:       Haskell2010
  exposed-modules:        Data.Fold.Katana
  -- other-modules:          
  build-depends:          base >= 4 && < 5

Executable example
  main-is:                Example.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded
  hs-source-dirs:         executable
  build-depends:          base >= 4 && < 5,
                          katana >= 0.1